--- a/docs-v2/integrations/all/google-docs.mdx
+++ b/docs-v2/integrations/all/google-docs.mdx
@@ -21,6 +21,7 @@ API configuration: [`google-docs`](https://nango.dev/providers.yaml)
 
 -   [Google Docs access token specs](https://cloud.google.com/iam/docs/reference/sts/rest/v1/TopLevel/token#response-body)
 -   [Google Docs OAuth scopes](https://developers.google.com/docs/api/auth#docs-scopes)
+-   [Google Docs API docs](https://developers.google.com/docs/api/reference/rest)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
