--- a/docs-v2/integrations/search.mdx
+++ b/docs-v2/integrations/search.mdx
@@ -10,4 +10,5 @@ sidebarTitle: Search
 
 <CardGroup cols={4}>
     <Card title="Algolia" href="/integrations/all/algolia" color="#68a063" />
+    <Card title="Exa" href="/integrations/all/exa" color="#68a063" />
 </CardGroup>
