fix: swapped link in webhooks doc page

--- a/docs-v2/understand/concepts/webhooks.mdx
+++ b/docs-v2/understand/concepts/webhooks.mdx
@@ -9,8 +9,8 @@ There are two types of webhooks in Nango: webhooks from Nango (to your app) and 
 # Webhooks from Nango
 
 Nango sends webhook notifications to your backend in different cases:
-- **Sync webhook**: new data from syncs is available ([step-by-step guide](/integrate/guides/authorize-an-api#listen-for-webhooks))
-- **Authorization webhook**: an authorization flow completes ([step-by-step guide](/integrate/guides/sync-data-from-an-api#listen-for-webhooks-from-nango))
+- **Sync webhook**: new data from syncs is available ([step-by-step guide](/integrate/guides/sync-data-from-an-api#listen-for-webhooks-from-nango))
+- **Authorization webhook**: an authorization flow completes ([step-by-step guide](/integrate/guides/authorize-an-api#listen-for-webhooks))
 - **Webhook forward**: an external API webhook is forwarded to your app ([step-by-step guide](/integrate/guides/receive-webhooks-from-an-api#configure-webhooks-from-nango))
 
 <Tip>
