--- a/docs-v2/integrations/all/freshsales.mdx
+++ b/docs-v2/integrations/all/freshsales.mdx
@@ -27,8 +27,8 @@ API configuration: [`freshsales`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 
-- Freshsales uses API_KEY auth mode with `Authorization: Token token= API_KEY` in the request header to access different endpoints.
-- When creating a connection, you need to add the subdomain as a connection configuratio parameter argument, for example: `nango.auth('freshsales', 'test-connection-id', {params: {subdomain: '<your-subdomain>'}})`.
-- In Freshsales, the rate limit is on an account level. It is irrespective of number of users. For details check [freshsales rate limit](https://support.freshsales.io/en/support/solutions/articles/223406-does-freshsales-have-api-request-limits-for-an-account-)
+- Freshsales uses API_KEY auth mode with `Authorization: Token token= API_KEY` as a request header.
+- When creating a connection, you need to add the subdomain as a connection configuration parameter, for example: `nango.auth('freshsales', 'test-connection-id', {params: {subdomain: '<your-subdomain>'}})`.
+- Freshsales enforces rate limit on the account level. For more details check [freshsales rate limit](https://support.freshsales.io/en/support/solutions/articles/223406-does-freshsales-have-api-request-limits-for-an-account-)
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/freshsales.mdx)</Note>
