feat(integrations): add support for squarespace

--- a/docs-v2/integrations/design.mdx
+++ b/docs-v2/integrations/design.mdx
@@ -11,4 +11,5 @@
     <Card title="Miro" href="/integrations/all/miro" color="#68a063" />
     <Card title="Mural" href="/integrations/all/mural" color="#68a063" />
     <Card title="Pinterest" href="/integrations/all/pinterest" color="#68a063" />
+    <Card title="Squarespace" href="/integrations/all/squarespace" color="#68a063" />
 </CardGroup>
