Add guide to handle large datasets

--- a/docs-v2/customize/guides/advanced/handle-rate-limits.mdx
+++ b/docs-v2/customize/guides/advanced/handle-rate-limits.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Handle Rate Limits'
-sidebarTitle: 'Handle Rate Limits'
+title: 'Handle rate limits'
+sidebarTitle: 'Handle rate limits'
 description: 'Step-by-step guide on how to handle API rate limits with Nango.'
 ---
 
