--- a/docs-v2/integrations/all/microsoft-teams.mdx
+++ b/docs-v2/integrations/all/microsoft-teams.mdx
@@ -21,7 +21,7 @@ API configuration: [`microsoft-teams`](https://nango.dev/providers.yaml)
 
 -   [How to register an Application](https://go.microsoft.com/fwlink/?linkid=2083908)
 -   [OAuth-related docs](https://learn.microsoft.com/en-us/azure/active-directory/develop/v2-oauth2-auth-code-flow)
--   [List of OAuth scopes](https://learn.microsoft.com/en-us/azure/active-directory/develop/permissions-consent-overview)
+-   [List of OAuth scopes](https://learn.microsoft.com/en-us/entra/identity-platform/scopes-oidc)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
@@ -34,6 +34,9 @@ This endpoint supports all Microsoft APIs available via the [Graph API](https://
 
 
 ## API gotchas
+
+* Make sure you request the `offline_access` scope to get a refresh token and keep access with your integration.
+
 
 <Note>
     Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/microsoft-teams.mdx)
