feat(integrations):add support for klipfolio api

--- a/docs-v2/integrations/dev-tools.mdx
+++ b/docs-v2/integrations/dev-tools.mdx
@@ -17,6 +17,7 @@ sidebarTitle: Developer Tools
     <Card title="Digital Ocean" href="/integrations/all/digitalocean" color="#68a063" />
     <Card title="Github" href="/integrations/all/github" color="#68a063" />
     <Card title="Gitlab" href="/integrations/all/gitlab" color="#68a063" />
+    <Card title="Klipfolio" href="/integrations/all/klipfolio" color="#68a063" />
     <Card title="PagerDuty" href="/integrations/all/pagerduty" color="#68a063" />
     <Card title="Pendo" href="/integrations/all/pendo" color="#68a063" />
     <Card title="Shortcut" href="/integrations/all/shortcut" color="#68a063" />
