--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -21,6 +21,7 @@ sidebarTitle: Productivity
     <Card title="Gmail" href="/integrations/all/google-mail" color="#68a063" />
     <Card title="GSheet" href="/integrations/all/google-sheet" color="#68a063" />
     <Card title="Jira" href="/integrations/all/jira" color="#68a063" />
+    <Card title="Klipfolio" href="/integrations/all/klipfolio" color="#68a063" />
     <Card title="Linear" href="/integrations/all/linear" color="#68a063" />
     <Card title="Microsoft Teams" href="/integrations/all/microsoft-teams" color="#68a063" />
     <Card title="Miro" href="/integrations/all/miro" color="#68a063" />
