--- a/docs-v2/integrations/all/klipfolio.mdx
+++ b/docs-v2/integrations/all/klipfolio.mdx
@@ -29,6 +29,6 @@ API configuration: [`klipfolio`](https://nango.dev/providers.yaml)
 ## API gotchas
 
 - Klipfolio uses API_KEY auth mode with `kf-api-key: API_KEY` as a request header to access different endpoints.
-- Klipfolio enforces rate limits for their endpoints based on the current plan. For more details check [Klipfolio rate limits](https://apidocs.klipfolio.com/reference/getting-started#rate-limiting)
+- Klipfolio enforces rate limits for its endpoints based on the subscribed plan. For more details check [Klipfolio rate limits](https://apidocs.klipfolio.com/reference/getting-started#rate-limiting)
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/klipfolio.mdx)</Note>
