--- a/docs-v2/integrations/storage.mdx
+++ b/docs-v2/integrations/storage.mdx
@@ -11,6 +11,7 @@ sidebarTitle: Storage
 <CardGroup cols={4}>
     <Card title="Box" href="/integrations/all/box" color="#68a063" />
     <Card title="Dropbox" href="/integrations/all/dropbox" color="#68a063" />
+    <Card title="Egnyte" href="/integrations/all/egnyte" color="#68a063" />
     <Card title="Google Drive" href="/integrations/all/google-drive" color="#68a063" />
     <Card title="NextCloud" href="/integrations/all/next-cloud" color="#68a063" />
     <Card title="One Drive" href="/integrations/all/one-drive" color="#68a063" />
