--- a/docs-v2/integrations/all/egnyte.mdx
+++ b/docs-v2/integrations/all/egnyte.mdx
@@ -30,7 +30,7 @@ API configuration: [`egnyte`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 
-- Currently Nango supports public [applications](https://developers.egnyte.com/docs/read/Public_API_Authentication#Public-Applications) via [authorization code](https://developers.egnyte.com/docs/read/Public_API_Authentication#auth_code) flow to generate an access token.
+- Currently Nango supports [public applications](https://developers.egnyte.com/docs/read/Public_API_Authentication#Public-Applications) via [authorization code](https://developers.egnyte.com/docs/read/Public_API_Authentication#auth_code) flow to generate an access token.
 - Egnyte [requires a user specific subdomain](https://developers.egnyte.com/docs/read/Public_API_Authentication#Authorization-Code-Flow) to run OAuth.
 - Until you application has been approved for production use, it will only work on the subdomain registered in your application key's profile.
 
