--- a/docs-v2/integrations/all/expensify.mdx
+++ b/docs-v2/integrations/all/expensify.mdx
@@ -60,6 +60,7 @@ let credentials: { partnerUserID?: string; partnerUserSecret?: string } = {};
         });
 ```
 - You can have a look at the following simple [action template](/integrations/integration-templates/expensify)
+- Every request has to be made against the same endpoint.
 - Expensify enforces a general rate limit of 50 jobs started per minute.
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/expensify.mdx)</Note>
