Add demo video to docs

--- a/docs-v2/introduction.mdx
+++ b/docs-v2/introduction.mdx
@@ -53,6 +53,10 @@ Nango's flexibility ensures it supports any API integration:
 
 But remember, Nango can work with **any API and any use-case**!
 
+# 📺 Demo video
+
+<iframe style={{width: "720px", height: "480px"}} src="https://www.loom.com/embed/d04c67b47e284e86b91b4b99fba548ec?sid=04100b13-c53b-47ce-8150-1a495771ee3f"></iframe>
+
 # 🚀 Get started
 
 Sign up for free and try the interactive demo:
