feat(integrations): add support for harvest api (#2039)
## Describe your changes

- Added configuration for harvest in providers.yaml
- Added harvest to docs-v2.
- Added harvest pages for Supported API groups in mint.json.
- Added harvest SVG file in template-logos folder.
- Consolidate harvest docs pages

## Issue ticket number and link

[EXT-51](https://linear.app/nango/issue/EXT-51/add-support-for-the-harvest-api)
## Test
This provider has been used successfully in local development to connect
to harvest after authorizing using Nango.
The documentation update was reviewed using `npm run docs` and verifying
on localhost.

--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -20,6 +20,7 @@ sidebarTitle: Productivity
     <Card title="Google Docs" href="/integrations/all/google-docs" color="#68a063" />
     <Card title="Gmail" href="/integrations/all/google-mail" color="#68a063" />
     <Card title="GSheet" href="/integrations/all/google-sheet" color="#68a063" />
+    <Card title="Harvest" href="/integrations/all/harvest" color="#68a063" />
     <Card title="Jira" href="/integrations/all/jira" color="#68a063" />
     <Card title="Klipfolio" href="/integrations/all/klipfolio" color="#68a063" />
     <Card title="Linear" href="/integrations/all/linear" color="#68a063" />
