Video size responsive in docs

--- a/docs-v2/introduction.mdx
+++ b/docs-v2/introduction.mdx
@@ -55,7 +55,11 @@ But remember, Nango can work with **any API and any use-case**!
 
 # 📺 Demo video
 
-<iframe style={{width: "720px", height: "480px"}} src="https://www.loom.com/embed/d04c67b47e284e86b91b4b99fba548ec?sid=04100b13-c53b-47ce-8150-1a495771ee3f"></iframe>
+
+
+<div style={{position: 'relative', overflow: 'hidden', paddingTop: '56.25%'}}>
+    <iframe style={{position: 'absolute', top: 0, left: 0, width: '100%', height: '100%'}} src="https://www.loom.com/embed/d04c67b47e284e86b91b4b99fba548ec?sid=04100b13-c53b-47ce-8150-1a495771ee3f"></iframe>
+</div>
 
 # 🚀 Get started
 
