--- a/docs-v2/customize/guides/create-a-custom-integration.mdx
+++ b/docs-v2/customize/guides/create-a-custom-integration.mdx
@@ -91,7 +91,7 @@ This command starts a process that continuously compiles your integration script
 Open the generated sync script (named `[sync-name].ts`) which should contain the following scaffolding : 
 
 ```typescript salesforce-contacts.ts
-import { NangoSync, Contact } from './models';
+import { NangoSync, Contact } from '../../models';
 
 export default async function fetchData(nango: NangoSync): Promise<void> {
 	// Integration code goes here.
@@ -101,7 +101,7 @@ export default async function fetchData(nango: NangoSync): Promise<void> {
 Fill in the `fetchData` method with your integration code (in the example here, we fetch tasks from Salesforce):
 
 ```ts salesforce-contacts.ts
-import { NangoSync, Contact } from './models';
+import { NangoSync, Contact } from '../../models';
 
 export default async function fetchData(nango: NangoSync): Promise<void> {
     const query = buildQuery(nango.lastSyncDate);
@@ -169,7 +169,7 @@ Learn more about sync scripts: [understanding syncs](/understand/concepts/syncs)
 Open the generated action script (named `[action-name].ts`) which should contain the following scaffolding : 
 
 ```typescript salesforce-contact-fields.ts
-import type { NangoAction, FieldSchema } from './models';
+import type { NangoAction, FieldSchema } from '../../models';
 
 export default async function runAction(nango: NangoAction): Promise<FieldSchema> {
     // Integration code goes here.
@@ -179,7 +179,7 @@ export default async function runAction(nango: NangoAction): Promise<FieldSchema
 Fill in the `runAction` method with your integration code (in the example here, we fetch available contact fields from Salesforce):
 
 ```ts salesforce-contact-fields.ts
-import type { NangoAction, FieldSchema } from './models';
+import type { NangoAction, FieldSchema } from '../../models';
 
 export default async function runAction(nango: NangoAction): Promise<FieldSchema> {
     try {
