--- a/docs-v2/understand/concepts/actions.mdx
+++ b/docs-v2/understand/concepts/actions.mdx
@@ -50,7 +50,7 @@ Action executions are powered by [integration scripts](/understand/concepts/scri
 Action scripts have the following structure:
 
 ```typescript
-import type { NangoAction, ResponseModel, ParameterModel } from './models';
+import type { NangoAction, ResponseModel, ParameterModel } from '../../models';
 
 export default async function runAction(
     nango: NangoAction, 
