[nan-748] better wording

--- a/docs-v2/customize/guides/setup.mdx
+++ b/docs-v2/customize/guides/setup.mdx
@@ -22,7 +22,7 @@ To initialize your integrations folder (e.g. at the root of your repository), ru
 nango init
 ```
 
-This `./nango-integrations` folder with some initial configuration and an example
+This creates the `./nango-integrations` folder with some initial configuration and an example
 sync script with the following structure:
 ```
 nango-integrations/
