[nan-748] improve wording further

--- a/docs-v2/customize/guides/setup.mdx
+++ b/docs-v2/customize/guides/setup.mdx
@@ -23,7 +23,7 @@ nango init
 ```
 
 This creates the `./nango-integrations` folder with some initial configuration and an example
-sync script with the following structure:
+sync script. The `nango-integrations` directory looks like this:
 ```
 nango-integrations/
 ├── .env
