--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -30,6 +30,7 @@ sidebarTitle: Productivity
     <Card title="Monday" href="/integrations/all/monday" color="#68a063" />
     <Card title="Mural" href="/integrations/all/mural" color="#68a063" />
     <Card title="Notion" href="/integrations/all/notion" color="#68a063" />
+    <Card title="Pivotaltracker" href="/integrations/all/pivotaltracker" color="#68a063" />
     <Card title="Shortcut" href="/integrations/all/shortcut" color="#68a063" />
     <Card title="Slack" href="/integrations/all/slack" color="#68a063" />
     <Card title="Smartsheet" href="/integrations/all/smartsheet" color="#68a063" />
