--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -24,6 +24,7 @@ sidebarTitle: Productivity
     <Card title="Harvest" href="/integrations/all/harvest" color="#68a063" />
     <Card title="Jira" href="/integrations/all/jira" color="#68a063" />
     <Card title="Klipfolio" href="/integrations/all/klipfolio" color="#68a063" />
+    <Card title="Lessonly" href="/integrations/all/lessonly" color="#68a063" />
     <Card title="Linear" href="/integrations/all/linear" color="#68a063" />
     <Card title="Microsoft Teams" href="/integrations/all/microsoft-teams" color="#68a063" />
     <Card title="Miro" href="/integrations/all/miro" color="#68a063" />
