--- a/docs-v2/integrations/all/bland.mdx
+++ b/docs-v2/integrations/all/bland.mdx
@@ -1,1 +1,28 @@
+---
+title: Bland
+sidebarTitle: Bland
+---
 
+API configuration: [`bland`](https://nango.dev/providers.yaml)
+
+## Features
+
+| Features | Status |
+| - | - |
+| [Auth (OAuth)](/integrate/guides/authorize-an-api) | ✅ |
+| [Sync data](/integrate/guides/sync-data-from-an-api) |  🚫 (time to contribute: &lt;48h)  |
+| [Perform workflows](/integrate/guides/perform-workflows-with-an-api) |  🚫 (time to contribute: &lt;48h)  |
+| [Proxy requests](/integrate/guides/proxy-requests-to-an-api) | 🚫 (time to contribute: &lt;48h)  |
+| [Receive webhooks](/integrate/guides/receive-webhooks-from-an-api) | 🚫 (time to contribute: &lt;48h) |
+
+<Tip>We can implement missing features in &lt;48h, just ask for it in the [community](https://nango.dev/slack).</Tip>
+
+## Getting started
+
+<Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
+
+## API gotchas
+
+_None yet, add yours!_
+
+<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/bland.mdx)</Note>
