--- a/docs-v2/customize/guides/setup.mdx
+++ b/docs-v2/customize/guides/setup.mdx
@@ -8,7 +8,7 @@ Set up the [Nango CLI](/understand/concepts/scripts#the-nango-cli) and an [integ
 
 # Install the Nango CLI
 
-Install the Nango CLI globally: 
+Install the Nango CLI globally:
 ```bash
 npm install -g nango
 ```
@@ -29,7 +29,7 @@ nango-integrations/
 ├── .env
 ├── nango.yaml
 ├── models.ts
-└── demo-github-integration
+└── demo-github-integration # this is the integration unique ID and must match the nango.yaml entry and the integration ID in the UI
     └── syncs/
         └── github-issue-example.ts
 ```
