--- a/docs-v2/reference/cli.mdx
+++ b/docs-v2/reference/cli.mdx
@@ -23,7 +23,7 @@ nango-integrations/
 ├── .env
 ├── nango.yaml
 ├── models.ts
-└── demo-github-integration
+└── demo-github-integration # this is the integration unique ID and must match the nango.yaml entry and the integration ID in the UI
     └── syncs/
         └── github-issue-example.ts
 ```
@@ -60,7 +60,7 @@ nango [command] --help
 | `nango dev`                    | Necessary to edit integration configurations and scripts.                                                                                         | Watches the `nango.yaml` and integration scripts, re-generates `models.ts` and compiled `.js` files. |
 | `nango generate`               | Generates an integration script `.ts` file with initial scaffold when new syncs appear in your `nango.yaml`.                                      | Re-generates `models.ts`, not the compiled `.js` files.                                              |
 | `nango dryrun <params>`        | Lets you test integration scripts locally.                                                                                                        |                                                                                                      |
-| `nango deploy <env>`           | Lets you deploy your sync to your `dev` or `prod environment`                                                                                     | Generates the compiled `.js` files.                                                                  |
+| `nango deploy <env>`           | Lets you deploy your sync to your `dev` or `prod` environment                                                                                     | Generates the compiled `.js` files.                                                                  |
 | `nango migrate-to-directories` | For earlier iterations of the nango-integrations directory all script files were located at the root level of the `nango-integrations directory`. | Moves the script files to `syncs` and `actions` directory within the integration name.               |
 
 
