--- a/docs-v2/customize/guides/setup.mdx
+++ b/docs-v2/customize/guides/setup.mdx
@@ -8,7 +8,7 @@ Set up the [Nango CLI](/understand/concepts/scripts#the-nango-cli) and an [integ
 
 # Install the Nango CLI
 
-Install the Nango CLI globally: 
+Install the Nango CLI globally:
 ```bash
 npm install -g nango
 ```
@@ -19,7 +19,19 @@ All your integrations live in a folder called `nango-integrations`. Whether loca
 
 To initialize your integrations folder (e.g. at the root of your repository), run:
 ```bash
-nango init # Creates `./nango-integrations` folder with some initial configuration
+nango init
+```
+
+This creates the `./nango-integrations` folder with some initial configuration and an example
+sync script. The `nango-integrations` directory looks like this:
+```
+nango-integrations/
+├── .env
+├── nango.yaml
+├── models.ts
+└── demo-github-integration # this is the integration unique ID and must match the nango.yaml entry and the integration ID in the UI
+    └── syncs/
+        └── github-issue-example.ts
 ```
 
 # Authenticate the CLI
