--- a/docs-v2/integrations/marketing.mdx
+++ b/docs-v2/integrations/marketing.mdx
@@ -27,4 +27,5 @@ sidebarTitle: Marketing
     <Card title="Sendgrid" href="/integrations/all/sendgrid" color="#68a063" />
     <Card title="Twitter" href="/integrations/all/twitter" color="#68a063" />
     <Card title="Zoho Bigin" href="/integrations/all/zoho-bigin" color="#68a063" />
+    <Card title="Microsoft Ads" href="/integrations/all/microsoft-ads" color="#68a063" />
 </CardGroup>
