feat(integrations): add support for envoy api

--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -15,6 +15,7 @@ sidebarTitle: Productivity
     <Card title="Clickup" href="/integrations/all/clickup" color="#68a063" />
     <Card title="Expensify" href="/integrations/all/expensify" color="#68a063" />
     <Card title="Exact Online" href="/integrations/all/exact-online" color="#68a063" />
+    <Card title="Envoy" href="/integrations/all/envoy" color="#68a063" />
     <Card title="Figjam" href="/integrations/all/figjam" color="#68a063" />
     <Card title="Figma" href="/integrations/all/figma" color="#68a063" />
     <Card title="Google Calendar" href="/integrations/all/google-calendar" color="#68a063" />
