--- a/docs-v2/integrations/crm.mdx
+++ b/docs-v2/integrations/crm.mdx
@@ -41,6 +41,7 @@ Ask us in the [Slack community](https://nango.dev/slack) and we can help you qui
     <Card title="Pipedrive" href="/integrations/all/pipedrive" color="#68a063" />
     <Card title="Salesforce" href="/integrations/all/salesforce" color="#68a063" />
     <Card title="Salesloft" href="/integrations/all/salesloft" color="#68a063" />
+    <Card title="Wealthbox" href="/integrations/all/wealthbox" color="#68a063" />
     <Card title="Zoho CRM" href="/integrations/all/zoho-crm" color="#68a063" />
 </CardGroup>
 
