--- a/docs-v2/integrations/support.mdx
+++ b/docs-v2/integrations/support.mdx
@@ -12,6 +12,7 @@ sidebarTitle: Support
     <Card title="Aircall" href="/integrations/all/aircall" color="#68a063" />
     <Card title="Freshdesk" href="/integrations/all/freshdesk" color="#68a063" />
     <Card title="Freshservice" href="/integrations/all/freshservice" color="#68a063" />
+    <Card title="Bland" href="/integrations/all/blandai" color="#68a063" />
     <Card title="Front" href="/integrations/all/front" color="#68a063" />
     <Card title="Github" href="/integrations/all/github" color="#68a063" />
     <Card title="Gitlab" href="/integrations/all/gitlab" color="#68a063" />
