--- a/docs-v2/integrations/all/blandai.mdx
+++ b/docs-v2/integrations/all/blandai.mdx
@@ -1,9 +1,9 @@
 ---
-title: Bland
-sidebarTitle: Bland
+title: Bland.ai
+sidebarTitle: Bland.ai
 ---
 
-API configuration: [`bland`](https://nango.dev/providers.yaml)
+API configuration: [`blandai`](https://nango.dev/providers.yaml)
 
 ## Features
 
@@ -19,10 +19,13 @@ API configuration: [`bland`](https://nango.dev/providers.yaml)
 
 ## Getting started
 
+- [Bland.ai developer docs](https://docs.bland.ai/)
+- [Bland.ai API docs](https://docs.bland.ai/api-v1/post/calls-simple)
+
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
 
 _None yet, add yours!_
 
-<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/bland.mdx)</Note>
+<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/blandai.mdx)</Note>
