--- a/docs-v2/integrations/all/blandai.mdx
+++ b/docs-v2/integrations/all/blandai.mdx
@@ -12,7 +12,7 @@ API configuration: [`blandai`](https://nango.dev/providers.yaml)
 | [Auth (OAuth)](/integrate/guides/authorize-an-api) | ✅ |
 | [Sync data](/integrate/guides/sync-data-from-an-api) |  🚫 (time to contribute: &lt;48h)  |
 | [Perform workflows](/integrate/guides/perform-workflows-with-an-api) |  🚫 (time to contribute: &lt;48h)  |
-| [Proxy requests](/integrate/guides/proxy-requests-to-an-api) | 🚫 (time to contribute: &lt;48h)  |
+| [Proxy requests](/integrate/guides/proxy-requests-to-an-api) | ✅ |
 | [Receive webhooks](/integrate/guides/receive-webhooks-from-an-api) | 🚫 (time to contribute: &lt;48h) |
 
 <Tip>We can implement missing features in &lt;48h, just ask for it in the [community](https://nango.dev/slack).</Tip>
