--- a/docs-v2/integrations/all/dialpad.mdx
+++ b/docs-v2/integrations/all/dialpad.mdx
@@ -19,7 +19,7 @@ API configuration: [`dialpad`](https://nango.dev/providers.yaml)
 
 ## Getting started
 
--   [Register an Application](https://airtable.com/shrju5b3Sqebrmn96)
+-   [Setup an Application](https://developers.dialpad.com/docs/oauth#setup)
 -   [OAuth-related docs](https://developers.dialpad.com/docs/oauth)
 -   [List of OAuth scopes](https://developers.dialpad.com/docs/oauth#supported-scopes)
 
