--- a/docs-v2/integrations/social.mdx
+++ b/docs-v2/integrations/social.mdx
@@ -17,6 +17,7 @@ sidebarTitle: Social
     <Card title="Reddit" href="/integrations/all/reddit" color="#68a063" />
     <Card title="Splitwise" href="/integrations/all/splitwise" color="#68a063" />
     <Card title="Strava" href="/integrations/all/strava" color="#68a063" />
+    <Card title="Strava" href="/integrations/all/strava-web" color="#68a063" />
     <Card title="TikTok" href="/integrations/all/tiktok" color="#68a063" />
     <Card title="Twitch" href="/integrations/all/twitch" color="#68a063" />
     <Card title="Twitter" href="/integrations/all/twitter" color="#68a063" />
