update(docs): update strava doc

--- a/docs-v2/integrations/all/strava.mdx
+++ b/docs-v2/integrations/all/strava.mdx
@@ -3,7 +3,7 @@ title: Strava
 sidebarTitle: Strava
 ---
 
-API configuration: [`strava`](https://nango.dev/providers.yaml) for Web OAuth flow [`strava-web`](https://nango.dev/providers.yaml)
+API configuration: [`strava`](https://nango.dev/providers.yaml) for Mobile OAuth flow and [`strava-web`](https://nango.dev/providers.yaml) for Web OAuth flow.
 
 ## Features
 
