feat(integration): add strava-web-oauth integration (#2118)
## Describe your changes
- Added configuration for strava-web in providers.yaml
- Added strava-web to existing strava docs-v2 .
- Added strava-web SVG file in template-logos folder.

## Issue ticket number and link
NA

## Test
This provider has been used successfully in local development to connect
to strava-web oauth after authorizing using Nango.

![image](https://github.com/NangoHQ/nango/assets/39801641/e0032c65-1b90-476e-8a16-9a2f269a086d)

![image](https://github.com/NangoHQ/nango/assets/39801641/99343bfb-933d-43f4-a6e4-983034f8314b)

The documentation update was reviewed using npm run docs and verifying
on localhost.

![image](https://github.com/NangoHQ/nango/assets/39801641/83040ddf-48f5-4921-bc4f-5a3e173e13d3)

---------

Co-authored-by: Achin <achin@crosshatch.io>

--- a/docs-v2/integrations/all/strava.mdx
+++ b/docs-v2/integrations/all/strava.mdx
@@ -3,7 +3,7 @@ title: Strava
 sidebarTitle: Strava
 ---
 
-API configuration: [`strava`](https://nango.dev/providers.yaml)
+API configuration: [`strava`](https://nango.dev/providers.yaml) for Mobile OAuth flow and [`strava-web`](https://nango.dev/providers.yaml) for Web OAuth flow.
 
 ## Features
 
@@ -21,7 +21,8 @@ API configuration: [`strava`](https://nango.dev/providers.yaml)
 
 -   [How to register an Application](https://developers.strava.com/docs/getting-started/#account)
 -   [OAuth-related docs](https://developers.strava.com/docs/authentication)
--   [List of OAuth scopes](https://developers.strava.com/docs/authentication/#:~:text=is%20auto.-,scope,-required%20string%2C%20in)
+-   [List of OAuth scopes](https://developers.strava.com/docs/authentication/#details-about-requesting-access)
+-   [Scopes Update](https://developers.strava.com/docs/oauth-updates/)
 -   [Web API docs (their REST API)](https://developers.strava.com/playground)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
