feat(integrations): add support for pivotaltracker api (#2084)
## Describe your changes

- Added configuration for pivotaltracker in providers.yaml
- Added pivotaltracker to docs-v2.
- Added pivotaltracker pages for Supported API groups in mint.json.
- Added pivotaltracker SVG file in template-logos folder.
- Consolidate pivotaltracker docs pages

## Issue ticket number and link

[EXT-55](https://linear.app/nango/issue/EXT-55/add-support-for-pivotaltracker-api)
## Test
This provider has been used successfully in local development to connect
to pivotaltracker after authorizing using Nango.
The documentation update was reviewed using `npm run docs` and verifying
on localhost.

--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -33,6 +33,7 @@ sidebarTitle: Productivity
     <Card title="Mural" href="/integrations/all/mural" color="#68a063" />
     <Card title="Notion" href="/integrations/all/notion" color="#68a063" />
     <Card title="Pingboard" href="/integrations/all/pingboard" color="#68a063" />
+    <Card title="Pivotaltracker" href="/integrations/all/pivotaltracker" color="#68a063" />
     <Card title="Shortcut" href="/integrations/all/shortcut" color="#68a063" />
     <Card title="Slack" href="/integrations/all/slack" color="#68a063" />
     <Card title="Smartsheet" href="/integrations/all/smartsheet" color="#68a063" />
