[nan-793] doc pr feedback

--- a/docs-v2/reference/sdks/node.mdx
+++ b/docs-v2/reference/sdks/node.mdx
@@ -568,7 +568,7 @@ await nango.updateMetadata('<INTEGRATION-ID>', ['CONNECTION-ID-1', 'CONNECTION-I
 <Expandable>
 ```json
 {
-    "connection_ids": "<string[]>",
+    "connection_ids": ["<string>"],
     "metadata": {
         "CUSTOM_KEY1": "CUSTOM_VALUE1"
     }
